<resources>
    <string name="app_name">Conversa</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="from">from</string>
    <string name="creator">a2ys</string>
    <string name="logo_of_the_app_for_the_landing_page">Logo of the app for the landing page.</string>
    <string name="chats">Chats</string>
    <string name="updates">Updates</string>
    <string name="calls">Calls</string>
    <string name="welcome_to">Welcome to</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="continue_with_phone_number">Continue with Phone Number</string>
    <string name="calls_section_is_coming_later">Calls section is coming later!</string>
    <string name="where_dem_chats_at">where dem chats at?</string>
    <string name="start_chat">Start Chat</string>
    <string name="otp">OTP</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="change">Change</string>
    <string name="wrong_phone_number">Wrong phone number?</string>
    <string name="continue_with_your">Continue with your</string>
    <string name="get_otp">Get OTP</string>
    <string name="sign_up_with_your">Sign Up with your</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="updates_section_is_coming_soon">Updates section is coming soon!</string>
    <string name="woman_waiting_on_a_chair_with_a_phone_in_hand">Woman waiting on a chair with a phone in hand</string>
    <string name="username_without">Username (without @)</string>
    <string name="woman_looking_at_photos_of_people_with_a_magnifying_glass">Woman looking at photos of people with a magnifying glass</string>
    <string name="username_please_nyour_search_awaits">Username, please!\nYour search awaits.</string>
    <string name="man_waiting_with_an_umbrella">Man waiting with an umbrella</string>
    <string name="man_searching_for_something_with_binoculars">Man searching for something with binoculars</string>
    <string name="enter_the_otp_sent_on">Enter the OTP sent on</string>
    <string name="plus_icon">Plus icon</string>
    <string name="phone_number_format">+91 %s</string>
</resources>