<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.a2ys.conversa.landingpage.activities.LandingPageActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_of_the_app_for_the_landing_page" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/TextAppearance.Conversa.BodyLarge"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/a2ys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creator"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/from"
        style="@style/TextAppearance.Conversa.HeadlineMedium"/>

</androidx.constraintlayout.widget.ConstraintLayout>