<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="32dp"
    tools:context="dev.a2ys.conversa.authentication.fragments.phoneNumberVerification.OtpVerificationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_the_otp_sent_on"
                style="@style/TextAppearance.Conversa.DisplaySmall" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/phn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/md_theme_light_primary"
                style="@style/TextAppearance.Conversa.DisplayLarge" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/otp"
            app:startIconDrawable="@drawable/password_bold"
            app:endIconMode="clear_text"
            android:layout_marginTop="128dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                android:maxLength="6"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_otp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"/>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"/>

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Conversa.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wrong_phone_number" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Conversa.BodyLarge"
                android:id="@+id/change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="@drawable/dashed_underline"
                android:text="@string/change"
                android:textStyle="bold"
                android:textColor="@color/md_theme_light_primary"/>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>