<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="dev.a2ys.conversa.main.fragments.ChatsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/search_illustration"
            android:layout_width="224dp"
            android:layout_height="224dp"
            android:src="@drawable/no_chats"
            android:layout_gravity="center"
            android:contentDescription="@string/man_searching_for_something_with_binoculars" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/seed"
            android:padding="32dp"
            android:text="@string/where_dem_chats_at"
            app:layout_constraintTop_toBottomOf="@id/search_illustration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextAppearance.Conversa.HeadlineSmall"
            android:textAlignment="center"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extended_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        android:contentDescription=""
        android:text="@string/start_chat"
        app:icon="@drawable/logo_icon"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>